--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face { 
     font-family: 'Agrandir'; 
-    src: url('fonts/agrandir/Agrandir-Regular.otf') format('opentype'); 
+    src: url('../fonts/agrandir/Agrandir-Regular.otf') format('opentype'); 
     font-weight: normal; 
     font-style: normal; 
  } 
