--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,35 @@ body {
   height: auto;
 }
 
+.animate-charcter
+{
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #000000 0%,
+    #2e2d2b 29%,
+    #5c5956 67%,
+    #8b8682 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear;
+  display: inline-block;
+  font-size: 3.5vw;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
 @media (max-width: 1024px) {
 
   body {
