--- a/styles/style.css
+++ b/styles/style.css
@@ -23,11 +23,36 @@ h1 {
 
 body {
   background-color: #e7dfd8;
+}
+
+.landing {
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   height: 100vh; 
   overflow: scroll;
+  flex-direction: column;
+}
+
+.nav {
+  width: 100%; /* Same width as the jumbotron */
+  /* justify-content: center; */
+  padding: 20px; /* Add padding for spacing */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-start;
+}
+
+.nav p {
+  padding-left: 5vw;
+  padding-right: 5vw;
+  font-family: 'agrandir_bold';
+}
+
+.nav a {
+  color: black; /* Set the link color to black */
+  text-decoration: none; /* Remove underlines on the links */
 }
 
 .jumbotron {
@@ -73,6 +98,7 @@ body {
 
 .bottom-container i {
   font-size: 2rem; /* Adjust the size as needed */
+  padding-right: 10px;
 }
 
 .bottom-container a {
@@ -92,6 +118,17 @@ body {
 .right-container img {
   max-width: 100%;
   height: auto;
+}
+
+.footer {
+  padding-top: 10px;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  font-size: 1vh;
+  font-family: 'agrandir_regular';
+  color: #b9b2ad
 }
 
 .animate-charcter
@@ -127,7 +164,13 @@ body {
 
   body {
     height: auto;
-    margin: 20px;
+    margin-top: 20px;
+  }
+
+  .nav p {
+    font-size: 2vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
   }
 
   /* Change the layout on small screens (phones) */
@@ -169,5 +212,10 @@ body {
 
   #location {
     justify-content: center;
+  }
+
+  .footer {
+    position: relative;
+    padding-top: 4vh;
   }
 }
