--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,18 @@ body {
   /* align-items: flex-start; */
 }
 
+.jumbotron-fluid {
+  /* border: 1px solid black; 
+  display: flex;
+  overflow: auto;
+  justify-self: center; */
+  /* flex-direction: column; */
+  border: none;
+  max-width: 100vw;
+  padding: 20px;
+  /* align-items: flex-start; */
+}
+
 .display-4 {
   font-size: 4vw;
 }
