--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,10 @@ body {
   /* align-items: flex-start; */
 }
 
+.with-gradient {
+  background: linear-gradient(to bottom, #f3efec 90%, #e7dfd8 100%, transparent 100%);
+}
+
 .display-4 {
   font-size: 4vw;
 }
