--- a/styles/style.css
+++ b/styles/style.css
@@ -148,9 +148,6 @@ body {
   color: #b9b2ad
 }
 
-.figure image {
-  width: 100%;
-}
 
 .animate-charcter
 {
@@ -201,6 +198,11 @@ body {
 .copy-text {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
+.figure a img {
+  width: 100%;
+}
+
 
 @keyframes textclip {
   to {
